--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/learnoz
-spring.datasource.username=root
-spring.datasource.password=269054
+spring.datasource.url=${env.DATABASE_URL}
+spring.datasource.username=${env.DATABASE_USER}
+spring.datasource.password=${env.DATABASE_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
